# claw-code

./: .gitignore
rust/crates/api/src/: client.rs  error.rs
rust/crates/cowclaw-promoter/: Cargo.toml
rust/crates/cowclaw-promoter/src/rules/: a_insight.rs  b_skill.rs  c_habit.rs  d_retro.rs  mod.rs
rust/crates/cowclaw-promoter/tests/: promoter_rules.rs
rust/crates/cowclaw-swarm/: Cargo.toml
rust/crates/cowclaw-swarm/src/: lib.rs
rust/crates/cowclaw-swarm/src/budget/: linter.rs  mod.rs
rust/crates/cowclaw-swarm/src/events/: mod.rs  reader.rs  schema.rs  writer.rs
rust/crates/cowclaw-swarm/src/gates/: mod.rs  oracle_consult.rs  plan_adversarial.rs  scope_reduction.rs  security.rs
rust/crates/cowclaw-swarm/src/hivemind/: broker.rs  mod.rs  protocol.rs
rust/crates/cowclaw-swarm/src/mcp_stdio/: mod.rs  server.rs
rust/crates/cowclaw-swarm/src/memory/: mempalace.rs  mod.rs  skill_loader.rs
rust/crates/cowclaw-swarm/src/oracle/: mod.rs
rust/crates/cowclaw-swarm/src/planner/: artifacts.rs  classify.rs  escalate.rs  mod.rs  profile.rs  sizing.rs  xml_plan.rs
rust/crates/cowclaw-swarm/src/worker/: mod.rs  runtime.rs  scratch.rs  stuck.rs
rust/crates/cowclaw-swarm/tests/: bridge_classify.rs  budget_linter_synth.rs  events_roundtrip.rs  gates_chain.rs  hivemind_roundtrip.rs  mcp_stdio_smoke.rs  memory_bridge.rs  oracle_wrapper.rs  planner_decompose.rs  profile_table_parity.rs  skill_loader_test.rs  stuck_detection.rs  worker_scratch.rs  worker_smoke.rs
rust/crates/runtime/src/: session_control.rs
rust/crates/rusty-claude-cli/src/: main.rs
(+4 files in other folders)
