[package]
name = "cowclaw-promoter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cowclaw-swarm = { path = "../cowclaw-swarm" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"

[[bin]]
name = "cowclaw-promoter"
path = "src/bin/cowclaw-promoter.rs"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
