[package]
name = "cowclaw-swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
telemetry = { path = "../telemetry" }
runtime = { path = "../runtime" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
quick-xml = { version = "0.36", features = ["serialize"] }
git2 = { version = "0.19", default-features = false }
anyhow = "1"
thiserror = "1"
toml = "0.8"
globset = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
assert_matches = "1"

[lints]
workspace = true
